feat(inbox): Add InboxItemTargetRepository and enhance InboxServiceIntegrationTest with target filtering